FIX: Use name property in the structured data
Google does want this property explicitly, and is not satisfied with givenName and familyName

--- a/app/assets/index.pug
+++ b/app/assets/index.pug
@@ -80,8 +80,7 @@ html(lang='de')
     footer(itemscope,itemtype="https://schema.org/Person")
       img(src="images/me.jpg", alt="Jan Syring-Lingenfelder", style="display:none", itemprop="image")
       h3
-        span(itemprop="givenName") Jan 
-        span(itemprop="familyName") Syring-Lingenfelder
+        span(itemprop="name") Jan Syring-Lingenfelder
       .two-column
         div(itemprop="address", itemscope, itemtype="https://schema.org/PostalAddress")
           span(itemprop="streetAddress") Altdorfer Straße 5
