FIX: mixin was missing prefix

--- a/app/assets/index.pug
+++ b/app/assets/index.pug
@@ -36,7 +36,7 @@ html(lang='de')
             
       h1.parallax#websites Webdesign
       section
-        p.in-flight Das Basteln von Webseiten war mein Einstieg in die IT-Welt. Das Interesse daran hat mein #[externallink('https://www.g-sl.de') Vater] geweckt, der sich auch damit beschäftigt und dem ich anfangs viel über die Schulter geschaut habe. Angefangen mit dem Ausprobieren in WYSIWYG Editoren und "rumfuhrwerken" im Code den sie generieren, habe ich mein Wissen in den üblichen Webtechnologien stetig weiterentwickelt und mittlerweile doch recht gut gefestigt. Und wie das halt so ist, wenn man etwas gut kann, dann darf man das auch für andere Leute anwenden ;-)
+        p.in-flight Das Basteln von Webseiten war mein Einstieg in die IT-Welt. Das Interesse daran hat mein #[+externallink('https://www.g-sl.de') Vater] geweckt, der sich auch damit beschäftigt und dem ich anfangs viel über die Schulter geschaut habe. Angefangen mit dem Ausprobieren in WYSIWYG Editoren und "rumfuhrwerken" im Code den sie generieren, habe ich mein Wissen in den üblichen Webtechnologien stetig weiterentwickelt und mittlerweile doch recht gut gefestigt. Und wie das halt so ist, wenn man etwas gut kann, dann darf man das auch für andere Leute anwenden ;-)
 
         .two-column
           figure.panel.in-flight
