--- a/app/assets/index.pug
+++ b/app/assets/index.pug
@@ -64,7 +64,7 @@ html(lang='de')
               p 
                 | Die DuttweilerApp für Android bietet Nachrichten und den Veranstaltungskalender von duttweiler.de für das Smartphone optimiert. Die Inhalte werden dabei von der Webseite via API übernommen - praktisch, dass die auch von mir geschrieben wurde.
                 br
-                | Zusätzlich erweitert die App das reine Anzeigen der Daten um nützliche Funktionen wie, wie z.B. Veranstaltugen zu teilen oder direkt in den eigenen Kalender zu übernehmen. Am nützlichsten ist wohl die Möglichkeit, sich via Push-Nachrichten über neue Nachriten informieren zu lassen und so immer auf dem laufenden zu bleiben.
+                | Zusätzlich erweitert die App das reine Anzeigen der Daten um nützliche Funktionen, wie z.B. Veranstaltugen zu teilen oder direkt in den eigenen Kalender zu übernehmen. Am nützlichsten ist wohl die Möglichkeit, sich via Push-Nachrichten über neue Nachrichten informieren zu lassen und so immer auf dem Laufenden zu bleiben.
               +externallink('https://play.google.com/store/apps/details?id=de.jan_sl.duttweiler.app&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1')
                 | Installieren
                 br
