TASK: Pointer cursor for the chevron

--- a/app/sass/components/_banner.sass
+++ b/app/sass/components/_banner.sass
@@ -25,6 +25,7 @@
     left: 50%
     margin-left: -16px
     font-size: 32px
+    cursor: pointer
     animation: chevron-bounce 0.5s linear 3.5s 2
     +landing-element-more-delayed
     +landing-element
