TASK: Extract CTA to a mixin
Extract the CTA styles to a mixin.
This allows it to be used more flexible,
e.g. outside of a panel

--- a/app/sass/base/_mixins.sass
+++ b/app/sass/base/_mixins.sass
@@ -8,3 +8,16 @@
   
 =landing-element-more-delayed
   transition-delay: 1.5s !important
+
+=cta
+  display: block;
+  font-size: large
+  font-style: normal
+  text-transform: uppercase
+  text-decoration: none
+  &::before
+    margin-right: 0.75em
+    content: '\f105'
+    font-family: "Font Awesome 5 Free"
+    font-weight: 400
+    display: inline-block
