--- a/app/sass/components/_panels.sass
+++ b/app/sass/components/_panels.sass
@@ -24,13 +24,4 @@
       padding: 0
     // CTA
     > a
-      font-size: large
-      font-style: normal
-      text-transform: uppercase
-      text-decoration: none
-      &::before
-        margin-right: 0.75em
-        content: '\f105'
-        font-family: "Font Awesome 5 Free"
-        font-weight: 400
-        display: inline-block
+      +cta
