FEATURE: Publish reverse engineering paper

--- a/app/assets/index.pug
+++ b/app/assets/index.pug
@@ -75,6 +75,8 @@ html(lang='de')
               h2 DHBW Rapla Action für Google
               p Sprachsteuerung und Smart Home sind in aller Munde, und auch bei mir ist ein Google Home eingezogen. Welche Frage stellt sich der geneigte Programmierer wohl als erstes? Einen passenden Use-Case hatte ich auch recht schnell gefunden. Da ich mir meinen Vorlesungsplan absolut nicht merken konnte (die App entstand während meines Studiums), soll das doch mein Assistent für mich übernehmen. Da unsere Vorlesungspläne praktischerweise als iCal Dateien verfügbar sind, war auch die Umsetzung der Serverseite relativ simpel. Das größere Problem war, das Voice UI entsprechend fehlertolerant zu gestalten und den Nutzer gut zu führen (das wird von Google übrigens manuell getestet). Nach einigem hin und her wurde die App dann akzeptiert und kann jetzt von jedem genutzt werden. Wer möchte, kann sich auch den #[+externallink('https://github.com/PalatinCoder/DHBWRapla-action') Sourcecode auf GitHub] ansehen.
               +externallink('https://assistant.google.com/services/a/uid/0000006d85967ba3?hl=de') Ausprobieren
+        p.in-flight Programmieren kann ich also. Und zwar nicht nur &bdquo;vorwärts&ldquo;, sondern auch rückwärts. Wie das geht? Das habe ich zusammen mit einem Kommilitonen im Rahmen unserer Studienarbeit, die übrigens mit &bdquo;Sehr Gut&ldquo; bewertet wurde, herausgefunden. Wer möchte, kann die Arbeit mit dem überaus interessanten Titel &bdquo;Analyse von Software unter Anwendung von Techniken des Reverse Code Engineering&ldquo; gerne hier abrufen.
+          +externallink('https://1drv.ms/b/s!Ah_OZv1_dH4Ykk5a8S2bWCovgrfU')(class='cta') Lesen
 
 
     footer(itemscope,itemtype="https://schema.org/Person")
