fix: replace google play link with under-development note

--- a/app/assets/index.pug
+++ b/app/assets/index.pug
@@ -62,13 +62,13 @@ html(lang='de')
             figcaption
               h2 DuttweilerApp
               p 
-                | Die DuttweilerApp für Android bietet Nachrichten und den Veranstaltungskalender von duttweiler.de für das Smartphone optimiert. Die Inhalte werden dabei von der Webseite via API übernommen - praktisch, dass die auch von mir geschrieben wurde.
+                | Die DuttweilerApp bietet Nachrichten und den Veranstaltungskalender von duttweiler.de für das Smartphone optimiert. Die Inhalte werden dabei von der Webseite via API übernommen - praktisch, dass die auch von mir geschrieben wurde.
                 br
                 | Zusätzlich erweitert die App das reine Anzeigen der Daten um nützliche Funktionen, wie z.B. Veranstaltugen zu teilen oder direkt in den eigenen Kalender zu übernehmen. Am nützlichsten ist wohl die Möglichkeit, sich via Push-Nachrichten über neue Nachrichten informieren zu lassen und so immer auf dem Laufenden zu bleiben.
-              +externallink('https://play.google.com/store/apps/details?id=de.jan_sl.duttweiler.app&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1')
-                | Installieren
-                br
-                img(src="https://play.google.com/intl/de_de/badges/images/generic/de_badge_web_generic.png", alt="Jetzt bei Google Play" width="200")
+              h3 Bald wieder da
+              p
+                | Aktuell entwickle ich die DuttweilerApp mit gleicher Funktionalität, aber neuem technischen Unterbau neu. Dies erlaubt mir neben einfacheren Updates auch einfachere Plattformunabhängigkeit, womit die neue DuttweilerApp erstmals auch für iOS Geräte verfügbar sein wird.
+                | Deshalb ist die App allerdings nicht mehr bei Google Play verfügbar. Wer aber schonmal die vorläufige Version ausprobieren will, kann sie unter #[+externallink('https://duttweiler.app/') duttweiler.app] starten, oder auf #[+externallink('https://github.com/PalatinCoder/DuttweilerApp') GitHub] die Entwicklung verfolgen.
           figure.panel.in-flight
             img(src="/images/products/dhbw-rapla.jpg", alt="Titelbild")
             figcaption
