--- a/app/sass/base/_mixins.sass
+++ b/app/sass/base/_mixins.sass
@@ -10,7 +10,7 @@
   transition-delay: 1.5s !important
 
 =cta
-  display: block;
+  display: block
   font-size: large
   font-style: normal
   text-transform: uppercase
