refactor: switch from font-awesome to fork-awesome
mainly because they have a matrix.org icon :^)

--- a/app/assets/index.pug
+++ b/app/assets/index.pug
@@ -20,7 +20,7 @@ html(lang='de')
         img(src='/images/me.jpg', alt='Profilbild').in-flight
         h1.in-flight Jan Syring-Lingenfelder
         h2.in-flight powering computers since 1996
-      i.fas.fa-chevron-circle-down.in-flight
+      i.fa.fa-chevron-circle-down.in-flight
 
     main
           
@@ -91,18 +91,18 @@ html(lang='de')
           span(itemprop="addressLocality") Neustadt
         address
           a(href="mailto:mail@jan-sl.de")
-            i.fas.fa-envelope
+            i.fa.fa-envelope
             span(itemprop="email") mail@jan-sl.de
           br
           link(href="https://www.jan-sl.de",itemprop="url")
           +externallink('https://github.com/PalatinCoder')(itemprop="sameAs")
-            i.fab.fa-github
+            i.fa.fa-github
             | PalatinCoder
           br
           +externallink('https://twitter.com/@sljan96')(itemprop="sameAs")
-            i.fab.fa-twitter
+            i.fa.fa-twitter
             | @sljan96
           br
           +externallink('https://t.me/syy96')
-            i.fab.fa-telegram-plane
+            i.fa.fa-telegram
             | @syy96
