--- a/app/sass/base/_mixins.sass
+++ b/app/sass/base/_mixins.sass
@@ -18,6 +18,6 @@
   &::before
     margin-right: 0.75em
     content: '\f105'
-    font-family: "Font Awesome 5 Free"
+    font-family: "ForkAwesome"
     font-weight: 400
     display: inline-block
