--- a/app/sass/components/_banner.sass
+++ b/app/sass/components/_banner.sass
@@ -19,7 +19,7 @@
   background-color: white
   min-height: 100%
   position: relative
-  i.fas.fa-chevron-circle-down
+  i.fa.fa-chevron-circle-down
     position: absolute
     bottom: 1em
     left: 50%
