--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -2,9 +2,7 @@
 
 $fa-font-path: './fonts'
 
-@import 'fontawesome'
-@import 'fa-solid'
-@import 'fa-brands'
+@import 'fork-awesome'
 
 @import "base/_variables"
 @import "base/_breakpoints"
