--- a/app/sass/components/_footer.sass
+++ b/app/sass/components/_footer.sass
@@ -17,7 +17,7 @@ footer
     +screen-large
       text-align: right
 
-    i.fab, i.fas
+    i.fa
       margin-right: 0.75em
       font-size: larger
       +screen-large
