feat: Contact me via matrix :tada:

--- a/app/assets/index.pug
+++ b/app/assets/index.pug
@@ -95,6 +95,10 @@ html(lang='de')
             span(itemprop="email") mail@jan-sl.de
           br
           link(href="https://www.jan-sl.de",itemprop="url")
+          +externallink('https://matrix.to/#/@jan:meet.jan-sl.de')(itemprop="sameAs")
+            i.fa.fa-matrix-org
+            | @jan:meet.jan-sl.de
+          br
           +externallink('https://github.com/PalatinCoder')(itemprop="sameAs")
             i.fa.fa-github
             | PalatinCoder
