--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,21 +1,20 @@
-<footer itemscope itemtype="https://schema.org/Person">
-	<img src="/me.jpg" alt="Jan Syring-Lingenfelder" style="display: none;" itemprop="image">
-    <h3><span itemprop="name">Jan Syring-Lingenfelder</span></h3>
-    <div class="two-column">
-        <div itemprop="address" itemscope itemtype="https://schema.org/PostalAddress">
+<footer class="footer" itemscope itemtype="https://schema.org/Person">
+    <img src="/me.jpg" alt="Jan Syring-Lingenfelder" class="is-hidden" itemprop="image">
+    <h3 class="title is-4"><span itemprop="name">Jan Syring-Lingenfelder</span></h3>
+    <div class="columns">
+        <div class="column" itemprop="address" itemscope itemtype="https://schema.org/PostalAddress">
             <span itemprop="streetAddress">Altdorfer Straße 14</span>
             <br>
             <span itemprop="postalCode">67435</span>
             <span itemprop="addressLocality">Neustadt</span>
         </div>
-        <address>
-            <a href="mailto:mail@jan-sl.de"><i class="fa fa-envelope"></i><span itemprop="email">mail@jan-sl.de</span></a>
-            <br>
+        <address class="column">
             <link itemprop="url" href="https://www.jan-sl.de/">
-            <a target="_blank" rel="noopener" itemprop="sameAs" href="https://matrix.to/#/@jan:meet.jan-sl.de">@jan:meet.jan-sl.de</a><br>
-            <a target="_blank" rel="noopener" itemprop="sameAs" href="https://github.com/PalatinCoder">PalatinCoder</a><br>
-            <a target="_blank" rel="noopener" itemprop="sameAs" href="https://twitter.com/@sljan96">@sljan96</a><br>
-            <a target="_blank" rel="noopener" itemprop="sameAs" href="https://t.me/syy96">syy96</a><br>
+            <a href="mailto:mail@jan-sl.de"><span class="icon"><i class="fa fa-envelope"></i></span><span itemprop="email">mail@jan-sl.de</span></a><br>
+            <a target="_blank" rel="noopener" itemprop="sameAs" href="https://matrix.to/#/@jan:meet.jan-sl.de"><span class="icon"><i class="fa fa-matrix-org"></i></span>@jan:meet.jan-sl.de</a><br>
+            <a target="_blank" rel="noopener" itemprop="sameAs" href="https://github.com/PalatinCoder"><span class="icon"><i class="fa fa-github"></i></span>PalatinCoder</a><br>
+            <a target="_blank" rel="noopener" itemprop="sameAs" href="https://twitter.com/@sljan96"><span class="icon"><i class="fa fa-twitter"></i></span>@sljan96</a><br>
+            <a target="_blank" rel="noopener" itemprop="sameAs" href="https://t.me/syy96"><span class="icon"><i class="fa fa-telegram"></i></span>syy96</a><br>
         </address>
     </div>
 </footer>
