--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -5,6 +5,7 @@
 	<meta name="description" content="Jan Syring-Lingenfelder - private Homepage - Webdesign, Software, IT" />
 	{{ $css := resources.Get "root.sass" | resources.ToCSS (dict "outputStyle" "compressed") | fingerprint }}
 	<link rel="stylesheet" href="{{ $css.Permalink }}">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fork-awesome@1.1.7/css/fork-awesome.min.css" integrity="sha256-gsmEoJAws/Kd3CjuOQzLie5Q3yshhvmo7YNtBG7aaEY=" crossorigin="anonymous">
 	{{ $title := print .Site.Title " | " .Title }}
 	{{ if .IsHome }}{{ $title = .Site.Title }}{{ end }}
 	<title>{{ $title }}</title>
