refactor: chevron is independent of the anchor

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -11,9 +11,9 @@
 		</div>
 	</div>
 	<div class="hero-foot">
-		<a class="icon is-medium is-clickable" href="#über-mich">
+		<span class="icon is-medium is-clickable">
 			<i class="fa fa-2x fa-chevron-circle-down in-flight bouncy-chevron"></i>
-		</a>
+		</span>
 	</div>
 </section>
 
