--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -6,7 +6,7 @@
 	{{ $css := resources.Get "root.sass" | resources.ToCSS (dict "outputStyle" "compressed") | fingerprint }}
 	<link rel="stylesheet" href="{{ $css.Permalink }}">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fork-awesome@1.1.7/css/fork-awesome.min.css" integrity="sha256-gsmEoJAws/Kd3CjuOQzLie5Q3yshhvmo7YNtBG7aaEY=" crossorigin="anonymous">
-	{{ $title := print .Site.Title " | " .Title }}
-	{{ if .IsHome }}{{ $title = .Site.Title }}{{ end }}
+	{{ $title := print .Title " | " .Site.Title }}
+	{{ if .IsHome }}{{ $title = .Title }}{{ end }}
 	<title>{{ $title }}</title>
 </head>
