--- a/assets/components/footer.sass
+++ b/assets/components/footer.sass
@@ -1,4 +1,10 @@
 .footer
+  background-color: $primary
+  color: $white
+  .title
+    color: $white
+  a
+    color: $white
   address
     +tablet
       text-align: right
