--- a/assets/components/footer.sass
+++ b/assets/components/footer.sass
@@ -1,4 +1,9 @@
 .footer
+  position: fixed
+  bottom: 0
+  width: 100%
+  height: 350px
+  z-index: -100
   background-color: $primary
   color: $white
   .title
@@ -14,3 +19,8 @@
       +tablet
         margin-left: 0.75em
         float: right
+
+main
+  box-shadow: 0 -15px 40px 20px rgba(0,0,0,0.8)
+  background-color: $white
+  margin-bottom: 350px
