--- a/layouts/shortcodes/section.html
+++ b/layouts/shortcodes/section.html
@@ -1,3 +1,5 @@
-<section class="section container">
-    {{ with .Inner }}{{ $.Page.RenderString . }}{{ end }}
+<section class="section">
+    <div class="container">
+        {{ with .Inner }}{{ $.Page.RenderString . }}{{ end }}
+    </div>
 </section>
