--- a/assets/root.sass
+++ b/assets/root.sass
@@ -1,7 +1,12 @@
 $primary: rgb(53,56,73)
+$family-serif: "Merriweather", "Georgia", serif;
 
 @import "bulma/bulma";
 
 @import "components/footer";
 @import "components/bouncy-chevron";
 @import "components/parallax-header";
+
+p
+  text-align: justify
+  font-family: $family-serif
