--- a/assets/root.sass
+++ b/assets/root.sass
@@ -1,6 +1,9 @@
 $primary: rgb(53,56,73)
 $family-serif: "Merriweather", "Georgia", serif;
 
+$widescreen-enabled: true
+$fullhd-enabled: false
+
 @import "bulma/bulma";
 
 @import "components/footer";
