--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -1,12 +1,13 @@
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<meta name="author" content="Jan Syring-Lingenfelder" />
-	<meta name="description" content="Jan Syring-Lingenfelder - private Homepage - Webdesign, Software, IT" />
-	{{ $css := resources.Get "root.sass" | resources.ToCSS (dict "outputStyle" "compressed") | fingerprint }}
-	<link rel="stylesheet" href="{{ $css.Permalink }}">
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fork-awesome@1.1.7/css/fork-awesome.min.css" integrity="sha256-gsmEoJAws/Kd3CjuOQzLie5Q3yshhvmo7YNtBG7aaEY=" crossorigin="anonymous">
-	{{ $title := print .Title " | " .Site.Title }}
-	{{ if .IsHome }}{{ $title = .Title }}{{ end }}
-	<title>{{ $title }}</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="Jan Syring-Lingenfelder" />
+    <meta name="description" content="{{ with .Description }}{{ . }}{{ else }}{{ with .Summary }}{{ . }}{{ else }}{{ .Site.Params.description }}{{ end }}{{ end }}" />
+    <link rel="canonical" href="{{ .Permalink }}" />
+    {{ $css := resources.Get "root.sass" | resources.ToCSS (dict "outputStyle" "compressed") | fingerprint }}
+    <link rel="stylesheet" href="{{ $css.Permalink }}">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fork-awesome@1.1.7/css/fork-awesome.min.css" integrity="sha256-gsmEoJAws/Kd3CjuOQzLie5Q3yshhvmo7YNtBG7aaEY=" crossorigin="anonymous">
+    {{ $title := print .Title " | " .Site.Title }}
+    {{ if .IsHome }}{{ $title = .Title }}{{ end }}
+    <title>{{ $title }}</title>
 </head>
