refactor: restructure template blocks
The template blocks are restructured so that the main content is always
wrapped by the `main` element, which is needed for the revealing footer
to work. Also a block for the page header is introduced to make the
template more modular and help with implementing list/single page
tempaltes.

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,4 +1,4 @@
-{{ define "main" }}
+{{ define "header" }}
 <section class="hero is-primary is-bold is-fullheight is-relative">
 	<div class="hero-head"></div>
 	<div class="hero-body">
@@ -16,10 +16,10 @@
 		</span>
 	</div>
 </section>
+{{ end }}
 
-<main>
-	{{ .Content }}
-</main>
+{{ define "main" }}
+{{ .Content }}
 
 {{ $bouncychevron := resources.Get "components/bouncy-chevron.js" }}
 {{ $bodyscripts := slice $bouncychevron | resources.Concat "bundle.index.js" | resources.Minify | fingerprint }}
