--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -2,8 +2,12 @@
 <html>
     {{- partial "head.html" . -}}
     <body>
-        {{- partial "header.html" . -}}
-        {{- block "main" . }}{{- end }}
+        <header>
+            {{- block "header" . }}{{- end }}
+        </header>
+        <main>
+            {{- block "main" . }}{{- end }}
+        </main>
         {{- partial "footer.html" . -}}
     </body>
 </html>
