--- a/layouts/index.html
+++ b/layouts/index.html
@@ -21,6 +21,15 @@
 {{ define "main" }}
 {{ .Content }}
 
+<div class="section">
+    <div class="container">
+        <h4 class="title is-5">Recent Posts</h4>
+        {{ range (.Site.RegularPages.ByLastmod | first 3) }}
+        {{ partial "post-summary.html" . }}
+        {{ end }}
+    </div>
+</div>
+
 {{ $bouncychevron := resources.Get "components/bouncy-chevron.js" }}
 {{ $bodyscripts := slice $bouncychevron | resources.Concat "bundle.index.js" | resources.Minify | fingerprint }}
 <script defer src="{{ $bodyscripts.Permalink }}"></script>
