--- a/layouts/partials/hero-with-navbar.html
+++ b/layouts/partials/hero-with-navbar.html
@@ -24,10 +24,7 @@
         <div class="container">
             <h1 class="title is-1 heading">{{ .Title }}</h1>
             {{ if not .IsSection }}
-            <div class="subtitle is-6">
-                <i class="fa fa-calendar"></i>&nbsp;<time>{{ .PublishDate.Format "02.01.2006" }}</time>&nbsp;
-                <i class="fa fa-clock-o"></i>&nbsp;{{ .ReadingTime }}min read
-            </div>
+            {{ partial "post-stats.html" . }}
             {{ end }}
         </div>
     </div>
