--- a/layouts/partials/hero-with-navbar.html
+++ b/layouts/partials/hero-with-navbar.html
@@ -3,7 +3,7 @@
         <nav class="navbar is-transparent">
             <div class="container">
                 <div class="navbar-brand">
-                    <a class="navbar-item" href="/">{{ .Site.Title }}</a>
+                    <a class="navbar-item" href="/">{{ .Site.Params.Title }}</a>
                     <a class="navbar-burger" role="button" aria-label="menu" aria-expanded="false" data-target="mainmenu">
                         <span aria-hidden="true"></span>
                         <span aria-hidden="true"></span>
