fix: enableGitInfo to automatically get Lastmod date

--- a/layouts/partials/post-stats.html
+++ b/layouts/partials/post-stats.html
@@ -3,6 +3,7 @@
                 <small>
                     &nbsp;|&nbsp;
                     <i class="fa fa-calendar"></i>&nbsp;<time>{{ .PublishDate.Format "02.01.2006" }}</time>&nbsp;
-                    <i class="fa fa-clock-o"></i>&nbsp;{{ .ReadingTime }}min read
+                    <i class="fa fa-pencil"></i>&nbsp;{{ .Lastmod.Format "02.01.2006" }}&nbsp;
+                    <i class="fa fa-clock-o"></i>&nbsp;{{ .ReadingTime }}min read&nbsp;
                 </small>
             </div>
